[gd_scene load_steps=38 format=3 uid="uid://dqq11yjuo41jy"]

[ext_resource type="Script" uid="uid://bwey51gd38vb0" path="res://player.gd" id="1_kpjcp"]
[ext_resource type="Texture2D" uid="uid://cwb8hwxijc21s" path="res://brackeys_platformer_assets/sprites/knight.png" id="2_kpjcp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1jgrc"]
atlas = ExtResource("2_kpjcp")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wy67"]
atlas = ExtResource("2_kpjcp")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q26ax"]
atlas = ExtResource("2_kpjcp")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p01ps"]
atlas = ExtResource("2_kpjcp")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kne1u"]
atlas = ExtResource("2_kpjcp")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e80uo"]
atlas = ExtResource("2_kpjcp")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxr5p"]
atlas = ExtResource("2_kpjcp")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdg3f"]
atlas = ExtResource("2_kpjcp")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtqjt"]
atlas = ExtResource("2_kpjcp")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ncpa"]
atlas = ExtResource("2_kpjcp")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wi0c6"]
atlas = ExtResource("2_kpjcp")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp6x6"]
atlas = ExtResource("2_kpjcp")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tkgg"]
atlas = ExtResource("2_kpjcp")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6ohk"]
atlas = ExtResource("2_kpjcp")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oudfo"]
atlas = ExtResource("2_kpjcp")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6rpx"]
atlas = ExtResource("2_kpjcp")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3kul"]
atlas = ExtResource("2_kpjcp")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jatw7"]
atlas = ExtResource("2_kpjcp")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv870"]
atlas = ExtResource("2_kpjcp")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_efikj"]
atlas = ExtResource("2_kpjcp")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpjcp"]
atlas = ExtResource("2_kpjcp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_itxgx"]
atlas = ExtResource("2_kpjcp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgsek"]
atlas = ExtResource("2_kpjcp")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pi4m"]
atlas = ExtResource("2_kpjcp")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sg6sq"]
atlas = ExtResource("2_kpjcp")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h84ma"]
atlas = ExtResource("2_kpjcp")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_47wu6"]
atlas = ExtResource("2_kpjcp")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2n1s8"]
atlas = ExtResource("2_kpjcp")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vjad"]
atlas = ExtResource("2_kpjcp")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yt0h1"]
atlas = ExtResource("2_kpjcp")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vd78s"]
atlas = ExtResource("2_kpjcp")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ictha"]
atlas = ExtResource("2_kpjcp")
region = Rect2(224, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_itxgx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jgrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wy67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q26ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p01ps")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kne1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e80uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxr5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdg3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtqjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ncpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wi0c6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp6x6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tkgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6ohk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oudfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6rpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3kul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jatw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv870")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efikj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpjcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itxgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgsek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pi4m")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sg6sq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h84ma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47wu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2n1s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vjad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yt0h1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vd78s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ictha")
}],
"loop": true,
"name": &"roll",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kpjcp"]
size = Vector2(14, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kne1u"]
size = Vector2(14, 19)

[node name="Node2D" type="CharacterBody2D"]
script = ExtResource("1_kpjcp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_itxgx")
animation = &"death"
frame_progress = 0.686338

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2.5)
shape = SubResource("RectangleShape2D_kpjcp")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="Area2D" type="Area2D" parent="." groups=["player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" groups=["player"]]
position = Vector2(-1, 2.5)
shape = SubResource("RectangleShape2D_kne1u")
debug_color = Color(0.689428, 0.412516, 0.729524, 0.42)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_right = 85.0
offset_bottom = 56.0

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Label2" type="Label" parent="CanvasLayer2"]
offset_left = 3.0
offset_top = 18.0
offset_right = 102.0
offset_bottom = 83.0

[node name="fireball_spawn_marker" type="Marker2D" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
